# simple-board-web

./: pyproject.toml
src/: main.py
src/static/: index.html  styles.css
src/static/board/: board.html  board.js
src/static/write/: write.html  write.js
