[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kang Nahoon <ejrtks102020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
icecream = "^2.1.3"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
